# animated-octo-sansa

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  Scene.h  TestScene.cpp  TestScene.h  cmake_install.cmake  glfw-thinger.cpp
Media/: buildUtilities.sh  setup.sh  texGen.sh
Media/Shaders/: basic.frag  basic.vert
Media/Textures/: Grass_Diffuse.tga  Grass_Height.tga  Grass_Normal.tga  Grass_Specular.tga  dirt.tgr  grass.tgr  stone.tgr  unknown.tgr
Media/Utilities/: NeoGen.java
Scenes/: CMakeLists.txt  Scene2D.cpp  Scene2D.h  TerrainChunk.cpp  TerrainChunk.h  TerrainGenerator.h  TestScene.cpp  TestScene.h
Utilities/: NeoGen.java
media/: setup.sh  texGen.sh
media/shaders/: terrain.frag.glsl  terrain.vert.glsl
media/textures/: Grass.1024.tgr  Skybox.256.tgr
src/: CMakeLists.txt  Config.h.in  Map.cpp  Map.hpp  Scene.hpp  TerrainChunk.cpp  TerrainChunk.hpp  TerrainGenerator.h  TerrainObject.cpp  TerrainObject.h  TerrainObject.hpp  TerrainScene.cpp  TerrainScene.h  TerrainScene.hpp  Util.h  Util.hpp  WorldGen.cpp  WorldGen.hpp  WorldPreviewScene.cpp  WorldPreviewScene.hpp  WorldPreviewWidget.cpp  WorldPreviewWidget.hpp  glfw-thinger.cpp
src/ui/: worldgen.ui
