ADD_DEFINITIONS(-std=c++11)
add_library(Scenes TestScene.cpp)
include_directories(${OPENGL_INCLUDE_DIRS} ${OPENGL_glu_INCLUDE_DIRS} ${FTGL_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS})
target_link_libraries(Scenes glfw ${GLFW_LIBRARIES} ${OPENGL_glu_LIBRARY} ${OPENGL_LIBRARIES} ${ASSIMP_LIBRARIES} ${FTGL_LIBRARIES})
